--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/Ubuntu/index.css" type="text/css" />
     <link rel="preload" href="%PUBLIC_URL%/Ubuntu/ubuntu-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="%PUBLIC_URL%/Ubuntu/ubuntu-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin />
+
+    <script async defer data-website-id="4548bb39-a3c9-425f-bc37-ed260b52dbf7" src="https://umami.qiekub.org/umami.js" data-domains="edit.volt.link"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
