added umami analytics

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
     -->
     <title>Edit volt.link</title>
 
+    <script
+      async
+      defer
+      data-website-id="6f999f39-798c-43eb-a066-59351d3f99e8"
+      src="https://umami.qiekub.org/umami.js"
+      data-domains="edit.volt.link"
+    ></script>
+
     <link rel="stylesheet" href="%PUBLIC_URL%/Ubuntu/index.css" type="text/css" />
     <link rel="preload" href="%PUBLIC_URL%/Ubuntu/ubuntu-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="%PUBLIC_URL%/Ubuntu/ubuntu-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin />
