--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
     <script async defer data-website-id="4548bb39-a3c9-425f-bc37-ed260b52dbf7" src="https://umami.qiekub.org/umami.js" data-domains="edit.volt.link"></script>
   </head>
-  <body>
+  <body class="basis_0_4">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
