made the console a bit more queer

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,25 @@
     -->
     <title>Edit volt.link</title>
 
+    <script>
+      // Just to make the console a bit queer.
+      console.info('%c \n Be yourself! \n\n', `
+        font-family: Ubuntu, sans-serif;
+        font-size: 5rem;
+        font-weight: bold;
+        color: white;
+        text-shadow:
+          1px 1px #ff69b5,
+          2px 2px #ff0000,
+          3px 3px #ff8f00,
+          4px 4px #ffff00,
+          5px 5px #008f00,
+          6px 6px #00c1c1,
+          7px 7px #3e0099,
+          8px 8px #8f008f;
+      `)
+    </script>
+
     <script
       async
       defer
