change theme- and background-color depending on dark mode
dunno if that works, could not test on macbook

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#502379" />
+    <meta name="theme-color" content="#502379" media="(prefers-color-scheme: dark)" />
+    <meta name="background-color" content="#502379" media="(prefers-color-scheme: dark)" />
     <meta
       name="description"
       content="Website to edit volt.link"
