--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Website to edit volt.link"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/volt-logo-white-192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
