--- a/public/index.html
+++ b/public/index.html
@@ -64,4 +64,9 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <style>
+    body > iframe {
+      display: none;
+    }
+  </style>
 </html>
