--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Edit volt.link</title>
+    <title>VoltLink</title>
 
     <script>
       // Just to make the console a bit queer.
