Updated the website meta-description

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="background-color" content="#502379" media="(prefers-color-scheme: dark)" />
     <meta
       name="description"
-      content="Website to edit volt.link"
+      content="VoltLink is an information-hub for Volt Europa."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/volt-logo-white-192.png" />
     <!--
