BUGFIX corrected the umami analytics import

--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,9 @@
     <script
       async
       defer
-      data-website-id="6f999f39-798c-43eb-a066-59351d3f99e8"
+      data-website-id="becf9dc6-db9a-42a7-bc64-9637bd885bff"
       src="https://umami.qiekub.org/umami.js"
-      data-domains="edit.volt.link"
+      data-domains="volt.link"
     ></script>
 
     <link rel="stylesheet" href="%PUBLIC_URL%/Ubuntu/index.css" type="text/css" />
