--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,10 @@
 
     <script>
       try {
-        window.SERVER_DATA = __SERVER_DATA__;
-      } catch (e) {}
+        window.SERVER_DATA = __SERVER_DATA__ || {};
+      } catch (error) {
+        window.SERVER_DATA = {}
+      }
     </script>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/volt-logo-white-192.png" />
