--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
     const tag = document.createElement('script')
     tag.async = 'async'
     tag.defer = 'defer'
-    tag.src = 'https://umami.qiekub.org/umami.js'
+    tag.src = 'https://umami.volt.link/script.js'
     tag.setAttribute('data-website-id',
       isDev
       ? '7a2e76f6-f133-4752-b972-f25ec2d0c730'
