--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
     <script>
       var _paq = window._paq = window._paq || [];
       /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-      _paq.push(["setCookieDomain", "*.volteuropa.org"]);
+      // _paq.push(["setCookieDomain", "*.volteuropa.org"]);
       _paq.push(["setDomains", ["*.volteuropa.org", "*.volt.link"]]);
       _paq.push(["enableCrossDomainLinking"]);
       _paq.push(['trackPageView']);
